src/CBindings/libfdtLite.rs

unsafe extern "C" {
    #[doc = " fdt_get_property_by_offset - retrieve the property at a given offset\n @fdt: pointer to the device tree blob\n @offset: offset of the property to retrieve\n @lenp: pointer to an integer variable (will be overwritten) or NULL\n\n fdt_get_property_by_offset() retrieves a pointer to the\n fdt_property structure within the device tree blob at the given\n offset.  If lenp is non-NULL, the length of the property value is\n also returned, in the integer pointed to by lenp.\n\n Note that this code only works on device tree versions >= 16. fdt_getprop()\n works on all versions.\n\n returns:\n\tpointer to the structure representing the property\n\t\tif lenp is non-NULL, *lenp contains the length of the property\n\t\tvalue (>=0)\n\tNULL, on error\n\t\tif lenp is non-NULL, *lenp contains an error code (<0):\n\t\t-FDT_ERR_BADOFFSET, nodeoffset did not point to FDT_PROP tag\n\t\t-FDT_ERR_BADMAGIC,\n\t\t-FDT_ERR_BADVERSION,\n\t\t-FDT_ERR_BADSTATE,\n\t\t-FDT_ERR_BADSTRUCTURE,\n\t\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_get_property_by_offset(
        fdt: *const core::ffi::c_void,
        offset: core::ffi::c_int,
        lenp: *mut core::ffi::c_int,
    ) -> *const fdt_property;
}
unsafe extern "C" {
    pub fn fdt_get_property_namelen(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
        namelen: core::ffi::c_int,
        lenp: *mut core::ffi::c_int,
    ) -> *const fdt_property;
}
unsafe extern "C" {
    #[doc = " fdt_get_property - find a given property in a given node\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node whose property to find\n @name: name of the property to find\n @lenp: pointer to an integer variable (will be overwritten) or NULL\n\n fdt_get_property() retrieves a pointer to the fdt_property\n structure within the device tree blob corresponding to the property\n named 'name' of the node at offset nodeoffset.  If lenp is\n non-NULL, the length of the property value is also returned, in the\n integer pointed to by lenp.\n\n returns:\n\tpointer to the structure representing the property\n\t\tif lenp is non-NULL, *lenp contains the length of the property\n\t\tvalue (>=0)\n\tNULL, on error\n\t\tif lenp is non-NULL, *lenp contains an error code (<0):\n\t\t-FDT_ERR_NOTFOUND, node does not have named property\n\t\t-FDT_ERR_BADOFFSET, nodeoffset did not point to FDT_BEGIN_NODE\n\t\t\ttag\n\t\t-FDT_ERR_BADMAGIC,\n\t\t-FDT_ERR_BADVERSION,\n\t\t-FDT_ERR_BADSTATE,\n\t\t-FDT_ERR_BADSTRUCTURE,\n\t\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_get_property(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
        lenp: *mut core::ffi::c_int,
    ) -> *const fdt_property;
}
unsafe extern "C" {
    pub fn fdt_getprop_by_offset(
        fdt: *const core::ffi::c_void,
        offset: core::ffi::c_int,
        namep: *mut *const core::ffi::c_char,
        lenp: *mut core::ffi::c_int,
    ) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    pub fn fdt_getprop_namelen(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
        namelen: core::ffi::c_int,
        lenp: *mut core::ffi::c_int,
    ) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    #[doc = " fdt_getprop - retrieve the value of a given property\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node whose property to find\n @name: name of the property to find\n @lenp: pointer to an integer variable (will be overwritten) or NULL\n\n fdt_getprop() retrieves a pointer to the value of the property\n named @name of the node at offset @nodeoffset (this will be a\n pointer to within the device blob itself, not a copy of the value).\n If @lenp is non-NULL, the length of the property value is also\n returned, in the integer pointed to by @lenp.\n\n returns:\n\tpointer to the property's value\n\t\tif lenp is non-NULL, *lenp contains the length of the property\n\t\tvalue (>=0)\n\tNULL, on error\n\t\tif lenp is non-NULL, *lenp contains an error code (<0):\n\t\t-FDT_ERR_NOTFOUND, node does not have named property\n\t\t-FDT_ERR_BADOFFSET, nodeoffset did not point to FDT_BEGIN_NODE\n\t\t\ttag\n\t\t-FDT_ERR_BADMAGIC,\n\t\t-FDT_ERR_BADVERSION,\n\t\t-FDT_ERR_BADSTATE,\n\t\t-FDT_ERR_BADSTRUCTURE,\n\t\t-FDT_ERR_TRUNCATED, standard meanings"]
    pub fn fdt_getprop(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        name: *const core::ffi::c_char,
        lenp: *mut core::ffi::c_int,
    ) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    #[doc = " fdt_get_phandle - retrieve the phandle of a given node\n @fdt: pointer to the device tree blob\n @nodeoffset: structure block offset of the node\n\n fdt_get_phandle() retrieves the phandle of the device tree node at\n structure block offset nodeoffset.\n\n returns:\n\tthe phandle of the node at nodeoffset, on success (!= 0, != -1)\n\t0, if the node has no phandle, or another error occurs"]
    pub fn fdt_get_phandle(fdt: *const core::ffi::c_void, nodeoffset: core::ffi::c_int) -> u32_;
}
unsafe extern "C" {
    pub fn fdt_get_alias_namelen(
        fdt: *const core::ffi::c_void,
        name: *const core::ffi::c_char,
        namelen: core::ffi::c_int,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    #[doc = " fdt_get_alias - retrieve the path referenced by a given alias\n @fdt: pointer to the device tree blob\n @name: name of the alias to look up\n\n fdt_get_alias() retrieves the value of a given alias.  That is, the\n value of the property named @name in the node /aliases.\n\n returns:\n\ta pointer to the expansion of the alias named 'name', if it exists\n\tNULL, if the given alias or the /aliases node does not exist"]
    pub fn fdt_get_alias(
        fdt: *const core::ffi::c_void,
        name: *const core::ffi::c_char,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn fdt_get_symbol_namelen(
        fdt: *const core::ffi::c_void,
        name: *const core::ffi::c_char,
        namelen: core::ffi::c_int,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    #[doc = " fdt_get_symbol - retrieve the path referenced by a given symbol\n @fdt: pointer to the device tree blob\n @name: name of the symbol to look up\n\n fdt_get_symbol() retrieves the value of a given symbol.  That is,\n the value of the property named @name in the node\n /__symbols__. Such a node exists only for a device tree blob that\n has been compiled with the -@ dtc option. Each property corresponds\n to a label appearing in the device tree source, with the name of\n the property being the label and the value being the full path of\n the node it is attached to.\n\n returns:\n\ta pointer to the expansion of the symbol named 'name', if it exists\n\tNULL, if the given symbol or the /__symbols__ node does not exist"]
    pub fn fdt_get_symbol(
        fdt: *const core::ffi::c_void,
        name: *const core::ffi::c_char,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    #[doc = " fdt_get_path - determine the full path of a node\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node whose path to find\n @buf: character buffer to contain the returned path (will be overwritten)\n @buflen: size of the character buffer at buf\n\n fdt_get_path() computes the full path of the node at offset\n nodeoffset, and records that path in the buffer at buf.\n\n NOTE: This function is expensive, as it must scan the device tree\n structure from the start to nodeoffset.\n\n returns:\n\t0, on success\n\t\tbuf contains the absolute path of the node at\n\t\tnodeoffset, as a NUL-terminated string.\n\t-FDT_ERR_BADOFFSET, nodeoffset does not refer to a BEGIN_NODE tag\n\t-FDT_ERR_NOSPACE, the path of the given node is longer than (bufsize-1)\n\t\tcharacters and will not fit in the given buffer.\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE, standard meanings"]
    pub fn fdt_get_path(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        buf: *mut core::ffi::c_char,
        buflen: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_supernode_atdepth_offset - find a specific ancestor of a node\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node whose parent to find\n @supernodedepth: depth of the ancestor to find\n @nodedepth: pointer to an integer variable (will be overwritten) or NULL\n\n fdt_supernode_atdepth_offset() finds an ancestor of the given node\n at a specific depth from the root (where the root itself has depth\n 0, its immediate subnodes depth 1 and so forth).  So\n\tfdt_supernode_atdepth_offset(fdt, nodeoffset, 0, NULL);\n will always return 0, the offset of the root node.  If the node at\n nodeoffset has depth D, then:\n\tfdt_supernode_atdepth_offset(fdt, nodeoffset, D, NULL);\n will return nodeoffset itself.\n\n NOTE: This function is expensive, as it must scan the device tree\n structure from the start to nodeoffset.\n\n returns:\n\tstructure block offset of the node at node offset's ancestor\n\t\tof depth supernodedepth (>=0), on success\n\t-FDT_ERR_BADOFFSET, nodeoffset does not refer to a BEGIN_NODE tag\n\t-FDT_ERR_NOTFOUND, supernodedepth was greater than the depth of\n\t\tnodeoffset\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE, standard meanings"]
    pub fn fdt_supernode_atdepth_offset(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
        supernodedepth: core::ffi::c_int,
        nodedepth: *mut core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_node_depth - find the depth of a given node\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node whose parent to find\n\n fdt_node_depth() finds the depth of a given node.  The root node\n has depth 0, its immediate subnodes depth 1 and so forth.\n\n NOTE: This function is expensive, as it must scan the device tree\n structure from the start to nodeoffset.\n\n returns:\n\tdepth of the node at nodeoffset (>=0), on success\n\t-FDT_ERR_BADOFFSET, nodeoffset does not refer to a BEGIN_NODE tag\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE, standard meanings"]
    pub fn fdt_node_depth(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " fdt_parent_offset - find the parent of a given node\n @fdt: pointer to the device tree blob\n @nodeoffset: offset of the node whose parent to find\n\n fdt_parent_offset() locates the parent node of a given node (that\n is, it finds the offset of the node which contains the node at\n nodeoffset as a subnode).\n\n NOTE: This function is expensive, as it must scan the device tree\n structure from the start to nodeoffset, *twice*.\n\n returns:\n\tstructure block offset of the parent of the node at nodeoffset\n\t\t(>=0), on success\n\t-FDT_ERR_BADOFFSET, nodeoffset does not refer to a BEGIN_NODE tag\n\t-FDT_ERR_BADMAGIC,\n\t-FDT_ERR_BADVERSION,\n\t-FDT_ERR_BADSTATE,\n\t-FDT_ERR_BADSTRUCTURE, standard meanings"]
    pub fn fdt_parent_offset(
        fdt: *const core::ffi::c_void,
        nodeoffset: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
